--- a/DirectConnectionPredictControl/DirectConnectionPredictControl.csproj
+++ b/DirectConnectionPredictControl/DirectConnectionPredictControl.csproj
@@ -82,8 +82,9 @@
     <Reference Include="IKVM.Runtime.JNI">
       <HintPath>..\..\..\..\software\ikvmbin\ikvmbin-7.2.4630.5\ikvm-7.2.4630.5\bin\IKVM.Runtime.JNI.dll</HintPath>
     </Reference>
-    <Reference Include="LitJson">
-      <HintPath>C:\Users\Summerki\Desktop\LitJson.dll</HintPath>
+    <Reference Include="LitJson, Version=2.3.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLL\LitJson.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Controls">
       <HintPath>..\..\..\WPF\originalcode\WPF.UI-master\ZdfFlatUI\DLL\Microsoft.Expression.Controls.dll</HintPath>
@@ -369,11 +370,25 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Content Include="CANJieMianMFC.exe" />
-    <Content Include="ControlCAN.dll" />
+    <Content Include="ControlCAN.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ControlCAN.h" />
     <Resource Include="header.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Content Include="DLL\DynamicDataDisplay.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DLL\LitJson.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DLL\Microsoft.Expression.Controls.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DLL\Microsoft.Expression.Drawing.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="kerneldlls\CAN232.dll" />
     <Content Include="kerneldlls\CANETE.dll" />
     <Content Include="kerneldlls\CANET_TCP.dll" />
