2018-12-4 fix and merge total
attention:
1. .vs folder, /obj folder and /bin folder should not be uploaded to github
2. fix 8 bugs from CRRC in Monday

--- a/DirectConnectionPredictControl/DirectConnectionPredictControl.csproj
+++ b/DirectConnectionPredictControl/DirectConnectionPredictControl.csproj
@@ -70,18 +70,6 @@
     <Reference Include="DynamicDataDisplay">
       <HintPath>..\..\..\..\..\项目\lib\DynamicDataDisplay.dll</HintPath>
     </Reference>
-    <Reference Include="excel">
-      <HintPath>..\..\excel.dll</HintPath>
-    </Reference>
-    <Reference Include="IKVM.OpenJDK.Core">
-      <HintPath>..\..\..\..\software\ikvmbin\ikvmbin-7.2.4630.5\ikvm-7.2.4630.5\bin\IKVM.OpenJDK.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="IKVM.Runtime">
-      <HintPath>..\..\..\..\software\ikvmbin\ikvmbin-7.2.4630.5\ikvm-7.2.4630.5\bin\IKVM.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="IKVM.Runtime.JNI">
-      <HintPath>..\..\..\..\software\ikvmbin\ikvmbin-7.2.4630.5\ikvm-7.2.4630.5\bin\IKVM.Runtime.JNI.dll</HintPath>
-    </Reference>
     <Reference Include="LitJson">
       <HintPath>C:\Users\Summerki\Desktop\LitJson.dll</HintPath>
     </Reference>
@@ -365,12 +353,26 @@
     <Resource Include="Asserts\train.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DLLs\DynamicDataDisplay.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DLLs\LitJson.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DLLs\Microsoft.Expression.Controls.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DLLs\Microsoft.Expression.Drawing.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="LitJson.dll" />
     <Resource Include="Asserts\header.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Content Include="CANJieMianMFC.exe" />
-    <Content Include="ControlCAN.dll" />
+    <Content Include="ControlCAN.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ControlCAN.h" />
     <Resource Include="header.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
